@@ -29,7 +29,7 @@ module ActiveMerchant #:nodoc:
         add_creditcard(post, creditcard)
         add_address(post, creditcard, options)
 
-        commit('charges', post)
+        commit('charges', post, options)
       end
 
       # Create a customer and associated credit card. The token that is returned
@@ -40,14 +40,14 @@ module ActiveMerchant #:nodoc:
         add_creditcard(post, creditcard)
         add_customer_data(post, options)
         add_address(post, creditcard, options)
-        commit('customers', post)
+        commit('customers', post, options)
       end
 
       # Refund a transaction, note that the money attribute is ignored at the
       # moment as the API does not support partial refunds. The parameter is
       # kept for compatibility reasons
       def refund(money, token, options = {})
-        commit("charges/#{CGI.escape(token)}/refunds", :amount => amount(money))
+        commit("charges/#{CGI.escape(token)}/refunds", { :amount => amount(money) }, options)
       end
 
       private
@@ -112,11 +112,11 @@ module ActiveMerchant #:nodoc:
         result
       end
 
-      def commit(action, params)
+      def commit(action, params, options)
         url = "#{test? ? test_url : live_url}/#{action}"
 
         begin
-          body = parse(ssl_post(url, post_data(params), headers(params)))
+          body = parse(ssl_post(url, post_data(params), headers(options)))
         rescue ResponseError => e
           body = parse(e.response.body)
         end
