@@ -7,6 +7,7 @@
 * PayPal Express gateway: Add support for creating billing agreements [fabiokr]
 * PayPal Express gateway: Add reference authorizations [fabiokr]
 * Add Cardstream Modern gateway [ExxKA]
+* Pin: Fix special headers [duff]
 
 == Version 1.32.1 (April 4, 2013)
 
